--- a/LittleSOKOBAN.vcxproj
+++ b/LittleSOKOBAN.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LittleSOKOBAN.cpp" />
+    <ClCompile Include="NewLittleSOKOBAN.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
